coffee-brain/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coffee-brain
  labels:
    name: coffee-brain
